move analysis to accordion

--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -29,14 +29,10 @@
 
 <div class="graph-section" id="ethnicity-section">
   <div class="grid-row">
-    <div class="column-whole question-graph">
+    <div class="column-two-thirds question-graph">
       <h3 class="heading-medium">
         All
       </h3>
-
-      <p>
-       The rate of UK unemployment as a percentage of the potential labour force
-      </p>
 
       <div id="container" style="max-width: 800px; height: 600px; margin: 0 auto"></div>
     </div>
@@ -61,12 +57,13 @@
 
 <div class="graph-section" id="gender-section">
   <div class="grid-row" >
-    <div class="column-whole question-graph">
+    <div class="column-two-thirds question-graph">
       <h3 class="heading-medium">
         Gender
       </h3>
 
       <div id="gender-container" style="max-width: 800px; height: 600px; margin: 0 auto"></div>
+
     </div>
 
     <div class="column-half">
@@ -83,79 +80,39 @@
       <button class="button">Download</button>
     </div>
 
-    <div class="column-two-thirds">
-      <p> White, Black, Bangladeshi/Pakistani, Indian, Other ethnic backgrounds. Other ethnic background includes those who responded Chinese, other, other Asian background and mixed/multiple ethnic groups </p>
-
-      <h3 class="heading-medium"> Analysis </h3>
-      <p>
-      The overall unemployment rate for males in the UK is slightly higher than that for females:
-      </p>
-      <p>
-      in the year to June 2016, the male unemployment rate was 5.2% compared to a female
-      unemployment rate of 5.0%. However, this hides some differences across ethnic groups.
-      Among people from a white, Black and “other ethnic” background, the unemployment
-      rate was similar or slighter higher for men than for women.
-      </p>
-
-      <p>
-      Women from a Bangladeshi/ Pakistani background had the highest unemployment rate of
-      16%, which was double that of Bangladeshi/ Pakistani men.
-      </p>
-
-      <p>
-      The reasons for economic inactivity can vary considerably between ethnic groups and between men and women. A number of factors contribute that can be both socio economic and cultural. They may also be influenced by the age distribution of the population which varies across ethnic groups.</p>
-
-      <p>
-      The main reason for men being economically inactive in the 2011 Census was because they were a student (37%) or sick and disabled (27%), whereas the main reason for women was because they were looking after the family and home (31%).</p>
-    </div>
   </div>
 </div>
 
 <div class="graph-section" id="age-section">
   <div class="grid-row">
-    <div class="column-whole question-graph">
+    <div class="column-two-thirds question-graph">
       <h3 class="heading-medium"> Age </h3>
 
       <p> Age groups are 16-24, 25-49, 50+ to cover everyone of a working age. </p>
 
       <div id="age-container" style="max-width: 800px; height: 500px; margin: 0 auto"></div>
 
+    </div>
 
-      <div class="column-half">
-        <div class="govuk-metadata">
-          <dl>
-            <dt> Source:</dt> <dd><a href="#">
-            2011 Census and the Labour Force Survey (LFS)</a></dd>
-            <dt>First Published: </dt> <dd>13/11/2014</dd>
-          </dl>
-        </div>
-      </div>
-
-      <div class="column-half">
-        <button class="button">Download</button>
+    <div class="column-half">
+      <div class="govuk-metadata">
+        <dl>
+          <dt> Source:</dt> <dd><a href="#">
+          2011 Census and the Labour Force Survey (LFS)</a></dd>
+          <dt>First Published: </dt> <dd>13/11/2014</dd>
+        </dl>
       </div>
     </div>
 
-    <div class="column-two-thirds">
-      <p>White, Black, Bangladeshi/Pakistani, Indian, Other ethnic backgrounds. Other ethnic background includes those who responded Chinese, other, other Asian background and mixed/multiple ethnic groups </p>
-
-      <h3 class = "heading-medium"> Analysis </h3>
-
-      <p>The unemployment rate for young black people aged 16-24 was the highest at 30% in
-        the year to June 2016. This compared to youth unemployment rates of 13% for white
-        people (the lowest) and 26% for people from a Bangladeshi/ Pakistani ethnic background
-        (the second highest).</p>
-
-      <p>White people had the lowest unemployment rate in all age categories.
-      For all ethnic groups shown in the table the unemployment rate was higher among 16-24
-      year olds than for other age groups. </p>
+    <div class="column-half">
+      <button class="button">Download</button>
     </div>
   </div>
 </div>
 
 <div class="graph-section" id="time-section">
   <div class="grid-row">
-    <div class="column-whole question-graph">
+    <div class="column-two-thirds question-graph">
         <div id="time-container" style="max-width: 800px; height: 500px; margin: 0 auto"></div>
     </div>
   </div>
@@ -267,6 +224,8 @@
       </div>
     </div>
 
+
+
     <div class="accordions-container container">
       <div class="accordion">
         <div class="accordion__header ">
@@ -288,6 +247,55 @@
           <p>
             Chinese moved from Other ethnic group to the Asian category in 2011, therefore Chinese has been included under Asian for the years preceding 2011; New tick boxes were also introduced for Gypsy or Irish Traveller under White and Arab under Other ethnic group
           </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="accordions-container container">
+      <div class="accordion">
+        <div class="accordion__header">
+          <h2><button>Main trends</button></h2>
+          <span class="plus-minus-icon"></span>
+        </div>
+
+        <div class="accordion__body">
+          <h3 class="heading-medium"> Gender </h3>
+
+          <p> White, Black, Bangladeshi/Pakistani, Indian, Other ethnic backgrounds. Other ethnic background includes those who responded Chinese, other, other Asian background and mixed/multiple ethnic groups </p>
+
+          <p>
+          The overall unemployment rate for males in the UK is slightly higher than that for females:
+          </p>
+
+          <p>
+          in the year to June 2016, the male unemployment rate was 5.2% compared to a female
+          unemployment rate of 5.0%. However, this hides some differences across ethnic groups.
+          Among people from a white, Black and “other ethnic” background, the unemployment
+          rate was similar or slighter higher for men than for women.
+          </p>
+
+          <p>
+          Women from a Bangladeshi/ Pakistani background had the highest unemployment rate of
+          16%, which was double that of Bangladeshi/ Pakistani men.
+          </p>
+
+          <p>
+          The reasons for economic inactivity can vary considerably between ethnic groups and between men and women. A number of factors contribute that can be both socio economic and cultural. They may also be influenced by the age distribution of the population which varies across ethnic groups.</p>
+
+          <p>
+          The main reason for men being economically inactive in the 2011 Census was because they were a student (37%) or sick and disabled (27%), whereas the main reason for women was because they were looking after the family and home (31%).</p>
+
+          <h3 class="heading-medium"> Age trends</h3>
+
+          <p>The unemployment rate for young black people aged 16-24 was the highest at 30% in
+            the year to June 2016. This compared to youth unemployment rates of 13% for white
+            people (the lowest) and 26% for people from a Bangladeshi/ Pakistani ethnic background
+            (the second highest).</p>
+
+          <p>White people had the lowest unemployment rate in all age categories.
+          For all ethnic groups shown in the table the unemployment rate was higher among 16-24
+          year olds than for other age groups. </p>
+
         </div>
       </div>
     </div>
