small content changes

--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -42,7 +42,7 @@
         <dl>
           <dt> Source:</dt> <dd><a href="#">
           2011 Census and the Labour Force Survey (LFS)</a></dd>
-          <dt>First Published: </dt> <dd>13/11/2014</dd>
+          <dt>Last Updated: </dt> <dd>11/12/2015</dd>
         </dl>
       </div>
     </div>
@@ -71,7 +71,7 @@
         <dl>
           <dt> Source:</dt> <dd><a href="#">
           2011 Census and the Labour Force Survey (LFS)</a></dd>
-          <dt>First Published: </dt> <dd>13/11/2014</dd>
+          <dt>Last Updated: </dt> <dd>11/12/2015</dd>
         </dl>
       </div>
     </div>
@@ -99,7 +99,7 @@
         <dl>
           <dt> Source:</dt> <dd><a href="#">
           2011 Census and the Labour Force Survey (LFS)</a></dd>
-          <dt>First Published: </dt> <dd>13/11/2014</dd>
+          <dt>Last Updated: </dt> <dd>11/12/2015</dd>
         </dl>
       </div>
     </div>
@@ -115,6 +115,20 @@
     <div class="column-two-thirds question-graph">
         <div id="time-container" style="max-width: 800px; height: 500px; margin: 0 auto"></div>
     </div>
+    <div class="column-half">
+      <div class="govuk-metadata">
+        <dl>
+          <dt> Source:</dt> <dd><a href="#">
+          2011 Census and the Labour Force Survey (LFS)</a></dd>
+          <dt>Last Updated: </dt> <dd>11/12/2015</dd>
+        </dl>
+      </div>
+    </div>
+
+    <div class="column-half">
+      <button class="button">Download</button>
+    </div>
+
   </div>
 </div>
 
@@ -145,6 +159,7 @@
           <h3 class="heading-medium">
             Summary
           </h3>
+
           <ul class="list-bullet">
             <li>
               In the 2011 Census, the Other White ethnic group (77%) had the highest employment rate of all ethnic groups (aged 16 to 64). This was the case for both men (82%) and women (72%) from this group.
@@ -216,15 +231,13 @@
           <h3 class="heading-medium"> Things you need to know </h3>
 
           <p>
-            "Unemployment figures are survey based. Smaller numbers of respondents from ethnic
+            Unemployment figures are survey based. Smaller numbers of respondents from ethnic
             minority backgrounds mean that unemployment estimates for ethnic minorities are more
-            volatile than estimates for white people. "
+            volatile than estimates for white people.
           </p>
         </div>
       </div>
     </div>
-
-
 
     <div class="accordions-container container">
       <div class="accordion">
@@ -261,29 +274,29 @@
         <div class="accordion__body">
           <h3 class="heading-medium"> Gender </h3>
 
-          <p> White, Black, Bangladeshi/Pakistani, Indian, Other ethnic backgrounds. Other ethnic background includes those who responded Chinese, other, other Asian background and mixed/multiple ethnic groups </p>
-
           <p>
-          The overall unemployment rate for males in the UK is slightly higher than that for females:
+          The overall unemployment rate for males in the UK is slightly higher than that for females
           </p>
 
           <p>
-          in the year to June 2016, the male unemployment rate was 5.2% compared to a female
-          unemployment rate of 5.0%. However, this hides some differences across ethnic groups.
-          Among people from a white, Black and “other ethnic” background, the unemployment
-          rate was similar or slighter higher for men than for women.
+            In the year to June 2016, the male unemployment rate was 5.2% compared to a female
+            unemployment rate of 5.0%. However, this hides some differences across ethnic groups.
+            Among people from a white, Black and “other ethnic” background, the unemployment
+            rate was similar or slighter higher for men than for women.
           </p>
 
           <p>
-          Women from a Bangladeshi/ Pakistani background had the highest unemployment rate of
-          16%, which was double that of Bangladeshi/ Pakistani men.
+            Women from a Bangladeshi/ Pakistani background had the highest unemployment rate of
+            16%, which was double that of Bangladeshi/ Pakistani men.
           </p>
 
           <p>
-          The reasons for economic inactivity can vary considerably between ethnic groups and between men and women. A number of factors contribute that can be both socio economic and cultural. They may also be influenced by the age distribution of the population which varies across ethnic groups.</p>
+            The reasons for economic inactivity can vary considerably between ethnic groups and between men and women. A number of factors contribute that can be both socio economic and cultural. They may also be influenced by the age distribution of the population which varies across ethnic groups.
+          </p>
 
           <p>
-          The main reason for men being economically inactive in the 2011 Census was because they were a student (37%) or sick and disabled (27%), whereas the main reason for women was because they were looking after the family and home (31%).</p>
+            The main reason for men being economically inactive in the 2011 Census was because they were a student (37%) or sick and disabled (27%), whereas the main reason for women was because they were looking after the family and home (31%).
+          </p>
 
           <h3 class="heading-medium"> Age trends</h3>
 
@@ -365,6 +378,7 @@
           participants on government-supported training and employment programmes; and
           those doing unpaid family work. Employed people are classed as economically
           active.</p>
+
           <p>ILO unemployed: These are people who are jobless, have been actively seeking
           work in the past four weeks and are available to start work in the next two weeks; or
           are out of work, but have found a job and are waiting to start it in the next two weeks.
