--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -15,6 +15,7 @@
   <div class="column-two-thirds">
 
     <p class="lede"> Find out how unemployment rates differ for people of various ethnicities in the UK.</p>
+
     <div class = "tabs-container">
 
       <ul class="tabs-nav">
@@ -37,20 +38,16 @@
       <div id="container" style="max-width: 800px; height: 600px; margin: 0 auto"></div>
     </div>
 
-    <div class="column-half">
+    <div class="column-whole">
       <div class="govuk-metadata">
         <dl>
           <dt> Source:</dt> <dd><a href="#">
           2011 Census and the Labour Force Survey (LFS)</a></dd>
           <dt>Last Updated: </dt> <dd>11/12/2015</dd>
         </dl>
+        <a href="#"> Download source data </a>
       </div>
     </div>
-
-    <div class="column-half">
-      <button class="button">Download</button>
-    </div>
-
   </div>
 </div>
 
@@ -66,20 +63,17 @@
 
     </div>
 
-    <div class="column-half">
+    <div class="column-whole">
       <div class="govuk-metadata">
         <dl>
           <dt> Source:</dt> <dd><a href="#">
           2011 Census and the Labour Force Survey (LFS)</a></dd>
           <dt>Last Updated: </dt> <dd>11/12/2015</dd>
         </dl>
+
+        <a href="#"> Download source data </a>
       </div>
     </div>
-
-    <div class="column-half">
-      <button class="button">Download</button>
-    </div>
-
   </div>
 </div>
 
@@ -94,18 +88,15 @@
 
     </div>
 
-    <div class="column-half">
+    <div class="column-whole">
       <div class="govuk-metadata">
         <dl>
           <dt> Source:</dt> <dd><a href="#">
           2011 Census and the Labour Force Survey (LFS)</a></dd>
           <dt>Last Updated: </dt> <dd>11/12/2015</dd>
         </dl>
+        <a href="#"> Download source data </a>
       </div>
-    </div>
-
-    <div class="column-half">
-      <button class="button">Download</button>
     </div>
   </div>
 </div>
@@ -115,20 +106,16 @@
     <div class="column-two-thirds question-graph">
         <div id="time-container" style="max-width: 800px; height: 500px; margin: 0 auto"></div>
     </div>
-    <div class="column-half">
+    <div class="column-whole">
       <div class="govuk-metadata">
         <dl>
           <dt> Source:</dt> <dd><a href="#">
           2011 Census and the Labour Force Survey (LFS)</a></dd>
           <dt>Last Updated: </dt> <dd>11/12/2015</dd>
         </dl>
+        <a href="#"> Download source data </a>
       </div>
     </div>
-
-    <div class="column-half">
-      <button class="button">Download</button>
-    </div>
-
   </div>
 </div>
 
@@ -137,7 +124,7 @@
   <div class="column-two-thirds">
      <h3 class="heading-medium"> Learn about this measure</h3>
 
-    <p> Find out what this measure means, get a summary of the key insights and find out how the data was collected. </p>
+    <p>Find out what this measure means, get a summary of the key insights, read the key trends for each of the above graphs and find out how the data was collected.</p>
 
     <div class="accordions-container container">
       <div class="accordion">
@@ -152,7 +139,7 @@
           </h3>
           <p>The rate of UK unemployment as a percentage of the potential labour force</p>
 
-          <p>Unemployed people are those without a job who have been actively seeking work in the past 4 weeks and are available to start work in the next 2 weeks. It also includes those who are out of work but have found a job and are waiting to start it in the next 2 weeks. Find out more about how unemployment is measured.</p>
+          <p>Unemployed people are those without a job who have been actively seeking work in the past 4 weeks and are available to start work in the next 2 weeks. It also includes those who are out of work but have found a job and are waiting to start it in the next 2 weeks.</p>
 
           <p>The level and rate of UK unemployment are measured by the Labour Force Survey (LFS) using a definition of unemployment specified by the International Labour Organisation.</p>
 
@@ -160,32 +147,21 @@
             Summary
           </h3>
 
-          <ul class="list-bullet">
-            <li>
-              In the 2011 Census, the Other White ethnic group (77%) had the highest employment rate of all ethnic groups (aged 16 to 64). This was the case for both men (82%) and women (72%) from this group.
-            </li>
-            <li>
-              The proportion of men aged 16 to 64 who were unemployed was highest in the Other Black (17%), White and Black Caribbean (16%) and Caribbean (15%) ethnic groups. For women it was highest for Black African (12%), White and Black Caribbean (11%) and Other Black (11%) groups.
-            </li>
-            <li>
-              The highest rates of economic inactivity for men were in the Chinese (40%), Arab (40%) and Gypsy or Irish Travellers (39%) ethnic groups. The highest rates for women were Arab (64%) Bangladeshi (61%), Pakistani (60%) and Gypsy or Irish Traveller (60%).
-            </li>
-            <li>
-              Of those in employment, men from the Pakistani (57%), Black African (54%) and Bangladeshi (53%) ethnic groups were most likely to work in low skilled jobs. For women the most likely were Gypsy or Irish Traveller (71%), Bangladeshi (67%) and White and Black Caribbean (66%).
-            </li>
-            <li>
-              Of those in employment, Gypsy and Irish Traveller men (41%) and women (18%) had the highest proportion of all ethnic groups who were self-employed.
-            </li>
-            <li>
-              Over half (54%) of Bangladeshi men in employment worked part-time (less than 30 hours a week) and just over 1 in 10 worked 15 hours a week or less (12%).
-            </li>
-            <li>
-              Bangladeshi (56%) and Gypsy or Irish Traveller (54%) women were the most likely to work part-time (less than 30 hours a week). Bangladeshi and Pakistani women had the highest proportion working less than 15 hours a week (23% and 20% respectively).
-            </li>
-            <li>
-             Young people (aged 16-24) from the Gypsy or Irish Travellers (14%), White and Black Caribbean (13%) and Black Caribbean (12%) ethnic groups had the highest proportion of young people who were unemployed.
-            </li>
-          </ul>
+           <p>
+            Unemployment has decreased over the past three years for most groups, with the exception of Indian and other Asian people, who have seen a small increase in unemployment. Younger people across all backgrounds have a significantly higher rate of unemployment.
+          </p>
+
+          <p>
+            In 2015, ethnic minorities have higher rates of unemployment, with people from a black background having the highest unemployment rate at 14%.
+          </p>
+
+          <p>
+            Whilst unemployment for both men and women is just above 5% in the UK, black men are more likely to be unemployed than black women, and Pakistani or Bangladeshi women are far more likely to be unemployed than Pakistani or Bangladeshi men.
+          </p>
+
+
+          <p>Read the <a href="/attainment8/metadata">further information and guidance </a>about the data in the tables.
+          </p>
         </div>
       </div>
     </div>
@@ -194,7 +170,7 @@
 
       <div class="accordion">
         <div class="accordion__header">
-          <h2><button> Publishing Details</button></h2>
+          <h2><button> Publishing details</button></h2>
           <span class="plus-minus-icon"></span>
         </div>
 
@@ -316,7 +292,7 @@
     <div class="accordions-container container">
       <div class="accordion">
         <div class="accordion__header ">
-          <h2><button> Technical Information</button></h2>
+          <h2><button> Technical information</button></h2>
            <span class="plus-minus-icon"></span>
         </div>
         <div class="accordion__body">
@@ -343,7 +319,7 @@
 
           Survey
 
-          <h3 class="heading-medium">Sample Size</h3>
+          <h3 class="heading-medium">Sample size</h3>
 
           <p>The LFS is a UK household sample survey which collects information from
           approximately 45,000 households each quarter. Since those responses reflect only a
@@ -399,6 +375,22 @@
         </div>
       </div>
     </div>
+
+    <div class="accordions-container container">
+      <div class="accordion">
+        <div class="accordion__header ">
+          <h2><button> Downloads </button></h2>
+           <span class="plus-minus-icon"></span>
+
+        </div>
+        <div class="accordion__body">
+          <ul class="list-bullet">
+            <li><a href="/assets/downloads/unemployment_in_the_labour_force_raw_data.csv"> download the raw data </a></li>
+            <li><a href="/assets/downloads/unemployment_in_the_labour_force_racial_disparity_audit_report.xlsx"> download the statistical report </a></li>
+            <li><a href="/assets/downloads/unemployment_in_the_labour_market_original_publication.xlsx"> download the original publication </a></li>
+          </ul>
+        </div>
+      </div>
   </div>
 
 </div>
