add download files

--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -385,9 +385,9 @@
         </div>
         <div class="accordion__body">
           <ul class="list-bullet">
-            <li><a href="/assets/downloads/unemployment_in_the_labour_force_raw_data.csv"> download the raw data </a></li>
-            <li><a href="/assets/downloads/unemployment_in_the_labour_force_racial_disparity_audit_report.xlsx"> download the statistical report </a></li>
-            <li><a href="/assets/downloads/unemployment_in_the_labour_market_original_publication.xlsx"> download the original publication </a></li>
+            <li><a href="/assets/downloads/unemployment_in_the_labour_force_raw_data.csv"> Download the raw data </a></li>
+            <li><a href="/assets/downloads/unemployment_in_the_labour_force_racial_disparity_audit_report.xlsx"> Download the statistical report </a></li>
+            <li><a href="/assets/downloads/unemployment_in_the_labour_market_original_publication.xlsx"> Download the original publication </a></li>
           </ul>
         </div>
       </div>
