download the files - chrome was opening excel files with an add on

--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -385,9 +385,9 @@
         </div>
         <div class="accordion__body">
           <ul class="list-bullet">
-            <li><a href="https://s3-eu-west-1.amazonaws.com/rd-alpha-downloads/unemployment_in_the_labour_force_raw_data.csv"> Download the raw data </a></li>
-            <li><a href="https://s3-eu-west-1.amazonaws.com/rd-alpha-downloads/unemployment_in_the_labour_force_racial_disparity_audit_report.xlsx"> Download the statistical report </a></li>
-            <li><a href="https://s3-eu-west-1.amazonaws.com/rd-alpha-downloads/unemployment_in_the_labour_market_original_publication.xlsx"> Download the original publication </a></li>
+            <li><a href="https://s3-eu-west-1.amazonaws.com/rd-alpha-downloads/unemployment_in_the_labour_force_raw_data.csv" download> Download the raw data </a></li>
+            <li><a href="https://s3-eu-west-1.amazonaws.com/rd-alpha-downloads/unemployment_in_the_labour_force_racial_disparity_audit_report.xlsx" download> Download the statistical report </a></li>
+            <li><a href="https://s3-eu-west-1.amazonaws.com/rd-alpha-downloads/unemployment_in_the_labour_market_original_publication.xlsx" download> Download the original publication </a></li>
           </ul>
         </div>
       </div>
